--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">SimpleApp</string>
     <string name="hello_world_text">0</string>
-    <string name="Left">Toast</string>
+    <string name="Left">Color</string>
     <string name="Middle">Count</string>
     <string name="Right">Random</string>
     <string name="random_heading">Here is a random number between 0 and %1d.</string>
